 Version 1.11 (February XX, 2015)
==================================
(this version is not save compatible with earlier versions)
Rewrote Omnifactory as a submarket plugin

 Version 1.10c (January 29, 2015)
==================================
Added "randomStartingLocation" setting, enabled by default:
 - With this set to true, the Omnifactory will orbit a random planet or star
   in a random system, so long as that planet doesn't have a station already
Default sell price is now almost always 0, except with very large transactions

 Version 1.10b (January 9, 2015)
=================================
Added "ignoreGoodRestrictions" setting, allows replication of restricted goods
You can no longer sell restricted or already known ships/weapons to the factory
Omnifactory now includes a storage tab, unlocked by default
Added a description for the Omnifactory submarket
Buy/sell replaced with appropriate verbs based on tariff setting

 Version 1.10 (January 5, 2015)
================================
(this version is not save compatible with earlier versions) (duh)
Compatibility fixes for new economy/market systems
Added Version Checker support
When added to existing save, syncs factory heartbeat to beginning of next day
Settings are global, defined in data/config/omnifactory/omnifac_settings.json
Restricted goods are defined in a CSV, merged so multiple mods can add to list
Fixed ancient bug where the wrong numbers were shown for analysis phase duration
Added "omnifactoryTariff" setting, defaults to 100%
Balance tweaks (mostly due to above default tariff):
 - You no longer earn a profit when selling to the Omnifactory
 - The prices of produced ships/weapons are vastly inflated
 - Resources still cost almost nothing to store (as there's no market demand)
Added to OmniFacSettings:
 - Set<String> getRestrictedWeapons()
 - Set<String> getRestrictedShips()
 - float getOmnifactoryTariff()

 Version 1.9 (May 9, 2014)
===========================